WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307063
[GTK][WPE] Framebuffer errors on history navigation with accelerated compositing disabled
https://bugs.webkit.org/show_bug.cgi?id=307063
Summary
[GTK][WPE] Framebuffer errors on history navigation with accelerated composit...
Carlos Garcia Campos
Reported
2026-02-05 05:49:15 PST
AcceleratedSurface was unable to construct a complete framebuffer
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2026-02-05 05:52:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57960
EWS
Comment 2
2026-02-06 01:45:45 PST
Committed
306926@main
(485e6bcf699a): <
https://commits.webkit.org/306926@main
> Reviewed commits have been landed. Closing PR #57960 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug