[GTK][WPE] Framebuffer errors on history navigation with accelerated compositing disabled https://bugs.webkit.org/show_bug.cgi?id=307063

Reviewed by Adrian Perez de Castro.

Ensure the right GL context is current when destroying the
NonCompositedFrameRenderer and when flusing the skia surface.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:
(WebKit::AcceleratedSurface::RenderTargetShareableBuffer::sync):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/NonCompositedFrameRenderer.cpp:
(WebKit::NonCompositedFrameRenderer::~NonCompositedFrameRenderer):
(WebKit::NonCompositedFrameRenderer::display):

Canonical link: https://commits.webkit.org/306926@main